--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "jquery":"1.11.0",
     "express-ws": "^4.0.0",
     "gfycat-style-urls": "^1.0.3",
     "sequelize": "^4.42.0",
